--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,15 +1,21 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: Poppins, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: Poppins, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
