--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -18,6 +18,7 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 
 #users {
@@ -28,7 +29,6 @@ a {
 }
 
 #provinces {
-	display: flex;
 	height: 100%;
 	width: 100%;
 	flex-wrap: wrap;
@@ -43,6 +43,6 @@ a {
 	background: #fde5b8;
 	color: #410318;
 	border: 0 ;
-	box-shadow: 5px 5px 17px rgba(0, 0, 0, 0.3);
+	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
 	padding: 0.8rem;
 }
