--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -26,6 +26,7 @@ a {
 	font-size: larger;
 	list-style: none;
 	font-weight: bold;
+	color: #410318;
 	z-index: 2;
 }
 
@@ -40,11 +41,16 @@ a {
 
 #provinces li {
 	min-width: 19%;
-	margin: 0.5rem;
+	margin: 0.6rem;
 	opacity: 1;
-	background: #fde5b8;
+	/* background: #fde5b8; */
+	background-color: #fbab7e;
+	background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
+	/* background-color: #ffe53b;
+	background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 74%); */
+
 	color: #410318;
 	border: 0;
 	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
-	padding: 1.5rem;
+	padding: 0.5rem;
 }
