--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -45,9 +45,9 @@ a {
 	opacity: 1;
 	background: #fde5b8;
 	/* background-color: #fbab7e; */
-	/* background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%); */
+	background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
 	/* background-color: #ffe53b; */
-	background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%);
+	/* background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%); */
 
 	color: #410318;
 	border-radius: 0.5rem;
