--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -42,7 +42,7 @@ a {
 #provinces li {
 	min-width: 19%;
 	margin: 0.6rem;
-	opacity: 1;
+	opacity: 0.75;
 	background: #fde5b8;
 	/* background-color: #fbab7e; */
 	background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
@@ -52,6 +52,32 @@ a {
 	color: #410318;
 	border-radius: 0.5rem;
 
+	border: 0;
+	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
+	padding: 0.8rem;
+}
+
+#villagelist {
+	display: inline-block;
+	margin: 1rem;
+}
+
+#villages {
+	height: 100%;
+	width: 100%;
+	flex-wrap: wrap;
+	list-style: none;
+	overflow: hidden;
+	z-index: 2;
+}
+
+#villages li {
+	min-width: 18%;
+	margin: 0.6rem;
+	opacity: 0.75;
+	background-image: linear-gradient(45deg, #fc9842 0%, #fe5f75 74%);
+	color: #410318;
+	border-radius: 0.5rem;
 	border: 0;
 	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
 	padding: 0.8rem;
