--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -26,7 +26,7 @@ a {
 	font-size: larger;
 	list-style: none;
 	font-weight: bold;
-	color: #410318;
+	color: #555;
 	z-index: 2;
 }
 
@@ -49,9 +49,8 @@ a {
 	/* background-color: #ffe53b; */
 	/* background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%); */
 
-	color: #410318;
+	color: #555;
 	border-radius: 0.5rem;
-
 	border: 0;
 	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
 	padding: 0.8rem;
@@ -76,7 +75,7 @@ a {
 	margin: 0.6rem;
 	opacity: 0.75;
 	background-image: linear-gradient(45deg, #fc9842 0%, #fe5f75 74%);
-	color: #410318;
+	color: #ccc;
 	border-radius: 0.5rem;
 	border: 0;
 	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
