--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -5,23 +5,19 @@ body {
 	margin: 0;
 	font-family: Poppins, sans-serif;
 }
-
 a {
 	color: inherit;
 	text-decoration: none;
 }
-
 * {
 	box-sizing: border-box;
 }
-
 .center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 }
-
 #users {
 	font-size: larger;
 	list-style: none;
@@ -29,7 +25,6 @@ a {
 	color: #555;
 	z-index: 2;
 }
-
 #provinces {
 	height: 100%;
 	width: 100%;
@@ -38,29 +33,26 @@ a {
 	overflow: hidden;
 	z-index: 2;
 }
-
 #provinces li {
 	min-width: 19%;
 	margin: 0.6rem;
 	opacity: 0.75;
-	background: #fde5b8;
-	/* background-color: #fbab7e; */
-	background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
-	/* background-color: #ffe53b; */
-	/* background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%); */
-
+	background: #fde5b8; /* background-color: #fbab7e; */
+	background-image: linear-gradient(
+		45deg,
+		#fbab7e 0%,
+		#f7ce68 100%
+	); /* background-color: #ffe53b; */ /* background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%); */
 	color: #555;
 	border-radius: 0.5rem;
 	border: 0;
 	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
 	padding: 0.8rem;
 }
-
 #villagelist {
 	display: inline-block;
 	margin: 1rem;
 }
-
 #villages {
 	height: 100%;
 	width: 100%;
@@ -69,7 +61,6 @@ a {
 	overflow: hidden;
 	z-index: 2;
 }
-
 #villages li {
 	min-width: 19.4%;
 	margin: 0.6rem;
