--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -13,25 +13,36 @@ a {
 
 * {
 	box-sizing: border-box;
-	color: red;
+	color: burlywood;
 }
 
 #__next {
 	background-color: #010101;
 	width: 100vw;
 	height: 100vh;
-  display: flex;
-  position: relative;
-
+	display: flex;
+	position: relative;
 	justify-content: center;
 	align-items: center;
 }
 
 .ext_wrapper {
-  width: 95vw;
-  height: 95vh;
-  background-color: #141414;
-  display: flex;
-  margin: auto;
+	width: 98vw;
+	height: 98vh;
+	background-color: #141414;
+	display: flex;
+	margin: auto;
 	border-radius: 40px;
+}
+
+.inn_wrapper {
+	width: 71.4vw;
+	background-color: #141414;
+}
+
+
+body {
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Poppins', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
 }
