--- a/admin/styles/Sidebar.module.css
+++ b/admin/styles/Sidebar.module.css
@@ -1,12 +1,12 @@
 .sidebar_container {
-	background: #1F1F1F;
-	color: rebeccapurple;
-    width: 13vw;
-    height: 100%;
-    border-radius: 40px 0 0 40px;
+	background: #1f1f1f;
+	color: #8d8d8d80;
+	width: 13vw;
+	height: 100%;
+	border-radius: 40px 0 0 40px;
 }
 
 .title {
-    font-size: larger;
-    text-align: center;
+	font-size: larger;
+	text-align: center;
 }
