--- a/admin/styles/Sidebar.module.css
+++ b/admin/styles/Sidebar.module.css
@@ -1,12 +1,55 @@
 .sidebar_container {
 	background: #1f1f1f;
 	color: #8d8d8d80;
-	width: 13vw;
 	height: 100%;
+	width: 13vw;
 	border-radius: 40px 0 0 40px;
 }
 
 .title {
 	font-size: larger;
 	text-align: center;
+	font-weight: 800;
+	text-transform: uppercase;
+	margin-top: 2.5rem;
+	color: #f24e1e;
+}
+
+.Name {
+	margin-left: 1.5rem;
+	text-transform: uppercase;
+	font-weight: bold;
+	color: #f24e1e;
+	font-size: 22px;
+}
+
+.MenuItem {
+	margin: auto;
+	cursor: pointer;
+}
+
+.Logout {
+	display: block;
+	position: absolute;
+	bottom: 1rem;
+	text-transform: uppercase;
+	color: #f24e1e;
+	font-weight: 800;
+
+	cursor: pointer;
+	align-items: center;
+	text-align: center;
+}
+
+.Icon {
+	font-size: 30px;
+}
+
+.Line {
+	margin-left: 3.5vw;
+}
+
+.Link {
+	margin: auto;
+	cursor: pointer;
 }
