--- a/admin/styles/Charts.module.css
+++ b/admin/styles/Charts.module.css
@@ -1,5 +1,6 @@
 .charts_container {
 	background: #1f1f1f;
+	color: #8d8d8d99;
 	width: 100%;
 	height: 100%;
 	/* bottom: -5rem; */
@@ -31,14 +32,17 @@
 	display: inline-flex;
 	width: 23vw;
 	height: 40vh;
-	background: #1f1f1f;
-	border: 1px solid #8d8d8d80;
+	background: #010101;
+	/* border: 1px solid #8d8d8d80; */
 	padding-right: 40px;
+	border-radius: 10px;
 }
 
 .title {
 	font-size: larger;
 	text-align: center;
+	width: 100%;
+	margin-top: 1rem;
 }
 
 .upper {
