--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -13,7 +13,6 @@ a {
 
 * {
 	box-sizing: border-box;
-	color: burlywood;
 }
 
 #__next {
@@ -40,9 +39,9 @@ a {
 	background-color: #141414;
 }
 
-
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Poppins', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
+	color: #8d8d8d99;
 }
