add all essential admin pages

--- a/admin/styles/ActiveProjects.module.css
+++ b/admin/styles/ActiveProjects.module.css
@@ -27,7 +27,7 @@
 
 .activeproject_container {
 	display: inline-flex;
-	background: #010101;
+	background: #8e203b;
 	justify-content: space-around;
 	border-radius: 10px;
 }
