--- a/admin/styles/Sidebare.module.css
+++ b/admin/styles/Sidebare.module.css
@@ -29,7 +29,7 @@
 	padding-right: 40px;
 }
 .profilemenu_container {
-	background: #010101;
+	background: #c61d23;
 	width: 100%;
 	height: 6%;
 	/* bottom: -5rem; */
