--- a/admin/styles/Sidebare.module.css
+++ b/admin/styles/Sidebare.module.css
@@ -29,18 +29,85 @@
 	padding-right: 40px;
 }
 .profilemenu_container {
-	background: #c61d23;
+	background: transparent;
 	width: 100%;
 	height: 6%;
+	margin: auto;
+	display: flex;
+	flex-direction: row;
 	/* bottom: -5rem; */
-	border-radius: 10px;
-	position: relative;
 	/* border: 1px solid #8d8d8d80; */
-	padding-right: 40px;
 }
 
-.title {
-	font-size: larger;
-	text-align: center;
-	/* margin-top: 1rem; */
+.profile {
+	margin: auto;
+	padding: 1rem;
+	display: flex;
+	flex-direction: row;
+}
+
+.Name {
+	font-size: 22px;
+	margin: 10px;
+	width: max-content;
+	word-wrap: break-word;
+}
+
+.namerole {
+	display: flex;
+	flex-direction: column;
+	color: #aaa;
+}
+
+.role {
+	background-color: #fca320;
+	color: #ccc;
+	width: max-content;
+	text-transform: uppercase;
+	padding: 5px 15px;
+	border-radius: 20px;
+	margin-left: 2rem;
+	font-weight: 600;
+}
+
+.icon_wrapper {
+	display: flex;
+	flex-direction: row;
+	/* border: 1px solid red; */
+	margin: auto;
+	padding: 1rem;
+}
+
+.icon_indicator {
+	display: flex;
+	position: relative;
+	background: #f28821;
+	margin: 10px;
+	width: 15px;
+	z-index: 11;
+	height: 15px;
+	border-radius: 8px;
+	transform: translate(-9px, -1px);
+}
+
+.avatar_container {
+	width: 80px;
+	height: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #2c2f33;
+	box-shadow: inset -12.446px -12.446px 31.1151px #fca320, inset 12.446px 12.446px 31.1151px #000000;
+	border-radius: 40px;
+}
+
+.avatar {
+	width: 65px;
+	height: 65px;
+	border-radius: 33px;
+	display: flex;
+	left: 36.71%;
+	right: 10.43%;
+	top: 2.59%;
+	bottom: 92.32%;
 }
