--- a/admin/styles/Projects.module.css
+++ b/admin/styles/Projects.module.css
@@ -1,14 +1,16 @@
 .projects_container {
+	display: block;
 	background: #1f1f1f;
-	color: #8d8d8d99;
+	color: #8d8d8d;
 	width: 100%;
 	height: 100%;
 	/* bottom: -5rem; */
+	text-align: center;
 	margin: 0.5rem;
 	border-radius: 10px;
 	/* border: 1px solid #8d8d8d80; */
 	padding: 10px;
-	font-size: larger;
+	/* font-size: larger; */
 }
 
 .grid {
@@ -18,7 +20,8 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	grid-gap: 1rem;
-	padding: 1rem;
+	padding: 0.5rem;
+	width: 100%;
 	/* max-width: 800px; */
 }
 
@@ -30,12 +33,48 @@
 }
 
 .project_container {
-	display: inline-flex;
-	width: 15%;
-	padding: 10px;
-	height: 20vh;
-	background: #100c08;
-	padding-right: 40px;
+	display: block;
+	width: 436px;
+	height: 500px;
+	padding: 5px;
+	background: #1d1b1c;
+	/* background-color: #f1bd89; */
+	/* background-color: #fffdd0; */
+	color: #8d8d8d79;
 	border-radius: 10px;
+	text-align: left;
 	/* border: 1px solid #8d8d8d80; */
 }
+
+.project_img {
+	display: flex;
+	width: 65%;
+	max-height: 50px;
+	margin: 0 auto;
+	object-fit: contain;
+	/* background-color: #fca32030; */
+}
+
+.heading {
+	margin: 5px;
+	color: #8d8d8d;
+}
+
+.teammate {
+	display: flex;
+	margin: auto;
+	flex-direction: column;
+	text-align: center;
+}
+
+.name {
+	margin: 7px 0;
+	color: #777;
+}
+
+.jobTitle {
+	overflow: hidden;
+	font-size: smaller;
+	margin-bottom: 10px;
+}
+
