--- a/admin/styles/Projects.module.css
+++ b/admin/styles/Projects.module.css
@@ -1,16 +1,14 @@
 .projects_container {
 	display: block;
-	background: #1f1f1f;
+	/* background: #1f1f1f; */
 	color: #8d8d8d;
 	width: 100%;
 	height: 100%;
-	/* bottom: -5rem; */
 	text-align: center;
 	margin: 0.5rem;
 	border-radius: 10px;
 	/* border: 1px solid #8d8d8d80; */
 	padding: 10px;
-	/* font-size: larger; */
 }
 
 .grid {
@@ -19,8 +17,8 @@
 	justify-content: center;
 	flex-direction: row;
 	flex-wrap: wrap;
-	grid-gap: 1rem;
-	padding: 0.5rem;
+	grid-gap: 0.5rem;
+	/* padding: 0.5rem; */
 	width: 100%;
 	/* max-width: 800px; */
 }
@@ -34,22 +32,26 @@
 
 .project_container {
 	display: block;
-	width: 436px;
+	width: 444px;
 	height: 500px;
 	padding: 5px;
-	background: #1d1b1c;
+	background: #141414;
 	/* background-color: #f1bd89; */
 	/* background-color: #fffdd0; */
 	color: #8d8d8d79;
 	border-radius: 10px;
 	text-align: left;
+	/* box-shadow: 6px 6px 17px #1d1b1c, -6px -6px 17px #141414; */
+	/* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 4px #222222; */
+	box-shadow: -7px -7px 19px 0px #FCA32010;
+
 	/* border: 1px solid #8d8d8d80; */
 }
 
 .project_img {
 	display: flex;
-	width: 65%;
-	max-height: 50px;
+	width: 100%;
+	max-height: 55px;
 	margin: 0 auto;
 	object-fit: contain;
 	/* background-color: #fca32030; */
@@ -77,4 +79,3 @@
 	font-size: smaller;
 	margin-bottom: 10px;
 }
-
