--- a/admin/styles/Sidebare.module.css
+++ b/admin/styles/Sidebare.module.css
@@ -9,16 +9,18 @@
 }
 
 .activites_container {
-	background: #010101;
+	background: #141414;
 	width: 100%;
-	height: 50%;
+	height: 49%;
 	border-radius: 10px;
 	/* border: 1px solid #8d8d8d80; */
 	margin-right: 0.5rem;
+	/* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 2px #fca32010; */
+	box-shadow: -7px -7px 19px 0px #FCA3201A;
 }
 
 .agenda_container {
-	background: #010101;
+	background: #141414;
 	width: 100%;
 	height: 42%;
 	/* bottom: -5rem; */
@@ -27,11 +29,13 @@
 	position: relative;
 	/* border: 1px solid #8d8d8d80; */
 	padding-right: 40px;
+	/* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 2px #fca32010; */
+	box-shadow: -7px -7px 19px 0px #FCA3201A;
 }
 .profilemenu_container {
 	background: transparent;
 	width: 100%;
-	height: 6%;
+	height: 7.5%;
 	margin: auto;
 	display: flex;
 	flex-direction: row;
@@ -87,4 +91,3 @@
 	border-radius: 8px;
 	transform: translate(-9px, -1px);
 } */
-
