--- a/admin/styles/Progress.module.css
+++ b/admin/styles/Progress.module.css
@@ -1,40 +1,50 @@
 .progress_container {
 	display: flex;
 	/* border: 1px solid #f24e1e; */
-	height: 150px;
-	width: 150px;
-	border-radius: 50%;
+	height: 155px;
+	width: 155px;
 	background: #2c2f33;
 	box-shadow: inset -16.5697px -16.5697px 41.4243px #3b4451, inset 16.5697px 16.5697px 41.4243px #000000;
 	border-radius: 50%;
 	z-index: 4;
 	margin: auto;
+	margin-top: -1.5rem;
+}
+
+.ellipse {
+	display: flex;
+	margin: auto;
+	width: 125px;
+	height: 125px;
+	background: linear-gradient(180deg, #f24e1e 68.69%, #fca320 100%);
+	border-radius: 50%;
 }
 
 .outer_circle {
 	display: flex;
 	margin: auto;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
 	z-index: 4;
 	width: 97px;
 	height: 97px;
 	background: #2c2f33;
 	box-shadow: 16.5697px 16.5697px 41.4243px rgba(0, 0, 0, 0.5);
-	border-radius: 331.395px;
+	border-radius: 50%;
 }
 
 .inner_circle {
 	display: flex;
 	margin: auto;
-	text-align: center;
-	justify-content: start;
-	align-items: center;
+
 	z-index: 4;
 	width: 75px;
 	height: 75px;
 	background: #2c2f33;
 	box-shadow: inset -16.5697px -16.5697px 41.4243px rgba(59, 68, 81, 0.5),
 		inset 16.5697px 16.5697px 41.4243px rgba(0, 0, 0, 0.5);
-	border-radius: 331.395px;
+	border-radius: 50%;
 }
 
 .progress_percent {
@@ -45,13 +55,4 @@
 	z-index: 5;
 }
 
-.ellipse {
-	position: absolute;
-	display: block;
-	z-index: 3;
-	width: 122px;
-	height: 122px;
-	background: linear-gradient(180deg, #f24e1e 68.69%, #fca320 100%);
-	border-radius: 50%;
-	transform: translate(11%, 11%);
-}
+
