--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -23,6 +23,7 @@ a {
 	position: relative;
 	justify-content: center;
 	align-items: center;
+	position: fixed;
 }
 
 .ext_wrapper {
@@ -44,4 +45,15 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Poppins', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
 	color: #8d8d8d99;
+}
+
+main {
+	overflow-y: scroll;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+main::-webkit-scrollbar {
+	display: none;
 }
