--- a/admin/styles/Projects.module.css
+++ b/admin/styles/Projects.module.css
@@ -1,14 +1,14 @@
 .projects_container {
 	display: block;
-	/* background: #1f1f1f; */
 	color: #8d8d8d;
 	width: 72vw;
 	height: 100%;
 	text-align: center;
-	margin: 0.5rem;
 	border-radius: 10px;
-	/* border: 1px solid #8d8d8d80; */
 	padding: 10px;
+	/* background: #1f1f1f; */
+	/* margin: 0.5rem; */
+	/* border: 1px solid #8d8d8d80; */
 }
 
 
@@ -19,8 +19,8 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	grid-gap: 0.5rem;
-	/* padding: 0.5rem; */
 	width: 100%;
+	/* padding: 0.5rem; */
 	/* max-width: 800px; */
 }
 
@@ -44,8 +44,8 @@
 	text-align: left;
 	/* box-shadow: 6px 6px 17px #1d1b1c, -6px -6px 17px #141414; */
 	/* box-shadow: 8px 8px 4px #1c1c1c, -8px -8px 4px #222222; */
+	
 	box-shadow: -7px -7px 19px 0px #FCA32010;
-
 	/* border: 1px solid #8d8d8d80; */
 }
 
@@ -74,6 +74,7 @@
 .name {
 	margin: 7px 0;
 	color: #777;
+	font-size: large;
 }
 
 .jobTitle {
