--- a/admin/styles/Sidebare.module.css
+++ b/admin/styles/Sidebare.module.css
@@ -9,7 +9,7 @@
 }
 
 .activites_container {
-	background: #141414;
+	background: #1f1f1f;
 	width: 100%;
 	height: 49%;
 	border-radius: 10px;
@@ -20,7 +20,7 @@
 }
 
 .agenda_container {
-	background: #141414;
+	background: #1f1f1f;
 	width: 100%;
 	height: 42%;
 	/* bottom: -5rem; */
