--- a/admin/styles/ActiveProjects.module.css
+++ b/admin/styles/ActiveProjects.module.css
@@ -1,10 +1,11 @@
 .activeprojects_container {
-	background: #1f1f1f;
+	/* background: #1f1f1f; */
 	width: 100%;
 	height: 100%;
 	margin: 0.5rem;
 	border-radius: 10px;
 	padding: 10px;
+	box-shadow: -7px -7px 19px 0px #FCA3201A;
 }
 
 .project_list {
@@ -27,7 +28,9 @@
 
 .activeproject_container {
 	display: inline-flex;
-	background: #141414;
+	background: #1f1f1f;
+
+	/* background: #141414; */
 	justify-content: space-around;
 	border-radius: 10px;
 }
@@ -41,14 +44,15 @@
 	display: flex;
 	width: 70.5vw;
 	justify-content: space-around;
-	
+	text-align: center;
 }
 
 .project_detail {
-	display: inline-block;
+	display: flex;
+	margin: auto;
 	text-align: center;
 	color: #8d8d8d90;
-	height: 39px;
+	line-height: 59px;
 }
 
 .project_details img {
@@ -62,11 +66,12 @@
 }
 
 .project_featured {
-	color: #6d6d6d;
+	display: flex;
 	font-weight: bold;
 	text-transform: uppercase;
-	display: flex;
 	width: 70vw;
+	color: #6d6d6d;
+	text-align: center;
 	justify-content: space-around;
-	
+	line-height: 30px;
 }
