--- a/admin/styles/Home.module.css
+++ b/admin/styles/Home.module.css
@@ -18,6 +18,22 @@
 	text-align: center;
 }
 
+.InlineRow {
+	display: inline-flex;
+}
+
+.Navs {
+	font-weight: bold;
+	font-size: x-large;
+	color: #8d8d8d;
+	margin: auto;
+	padding-left: 1.5rem;
+}
+
+.Navs:hover {
+	color: #FCA320;
+}
+
 .footer {
 	display: flex;
 	flex: 1;
