--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -49,11 +49,16 @@ a {
 	line-height: 3rem;
 	margin-bottom: 0.5rem;
 	margin-top: 1rem;
+	padding-left: 3.5rem;
+}
+.inn_wrapper input:focus-visible,
+.inn_wrapper input:hover {
+	color: #f24e1e;
+	background-color: #1f1f1f;
 }
 
 .inn_wrapper label {
 	color: #aaa;
-
 }
 
 body {
