--- a/admin/styles/Home.module.css
+++ b/admin/styles/Home.module.css
@@ -26,7 +26,7 @@
 
 .Navs,
 .Navs1 {
-	margin-top: 1.9rem;
+	margin-top: 1.5rem;
 }
 
 .Navs {
@@ -78,6 +78,10 @@
 
 .searchButton i {
 	color: #fca320;
+}
+
+.searchButton i:hover {
+	color: #f24e1e;
 }
 
 .grid {
