--- a/admin/styles/Navigation.module.css
+++ b/admin/styles/Navigation.module.css
@@ -5,12 +5,13 @@
 	width: 100%;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 2rem;
+	font-weight: bold;
 }
 
 .Name {
 	margin-left: 1rem;
 	text-transform: uppercase;
-	font-weight: bold;
 }
 
 .Logout .fas:hover,
@@ -18,13 +19,19 @@
 	color: #FCA320;
 }
 
+.Inline i {
+	color: #FCA320;	
+}
 
+.Inline .MenuItem:active {
+	color: #FCA320;
+}
 
 .Inline,
 .MenuItem {
-	font-size: larger;
+	font-size: large;
 	cursor: pointer;
-	margin: 3rem 0;
+	margin: 2.8rem 0;
 }
 
 .MenuItem {
