add edit icon to project

--- a/admin/styles/components/Projects.module.css
+++ b/admin/styles/components/Projects.module.css
@@ -82,3 +82,9 @@
 	font-size: smaller;
 	margin-bottom: 10px;
 }
+
+.between {
+	display: inline-flex;
+	width: 100%;
+	justify-content: space-between;
+}
