--- a/admin/styles/pages/Home.module.scss
+++ b/admin/styles/pages/Home.module.scss
@@ -6,7 +6,6 @@
 .main {
 	min-height: 100vh;
 	/* padding: 4rem 0; */
-	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -23,11 +22,7 @@
 	font-weight: bold;
 	font-size: x-large;
 	color: #8d8d8d;
-}
-
-.Navs,
-.Navs1 {
-	margin-top: 1.5rem;
+	margin-top: 1rem;
 }
 
 .Navs {
@@ -50,21 +45,12 @@
 	position: relative;
 	display: flex;
 }
-.searchTerm {
-	width: 100%;
-	border: 3px solid #00b4cc;
-	border-right: none;
-	padding: 5px;
-	border-radius: 5px 0 0 5px;
-	outline: none;
-	color: #9dbfaf;
-}
+
 .searchTerm:focus {
 	color: #fca320;
 	background-color: #8d8d8d;
 }
 .searchButton {
-	margin-top: 1.2rem;
 	position: absolute;
 	top: 0;
 	left: 3rem;
@@ -91,6 +77,15 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	max-width: 800px;
+}
+
+.icon_indicator {
+	background-color: #fca320;
+	border-radius: 20px;
+	width: 15px;
+	height: 10px;
+	z-index: 3;
+	transform: translate(-16px, 10px);
 }
 
 @media (max-width: 600px) {
