--- a/admin/styles/components/Messages.module.scss
+++ b/admin/styles/components/Messages.module.scss
@@ -1,101 +1,153 @@
 .conversations_container {
-    width: 21vw;
-    background: #1f1f1f;
-    display: inline-block;
-    font-weight: bold;
-    flex-direction: column;
-    margin: 1rem auto;
-    height: 70vh;
-    justify-content: space-between;
+	width: 21vw;
+	background: #1f1f1f;
+	display: inline-block;
+	font-weight: bold;
+	flex-direction: column;
+	margin:  auto;
+	height: 96vh;
+	justify-content: space-between;
 }
 
 .content_container {
-    display: inline-block;
-    width: 56vmax;
-    height: 70vh;
-    background: #1f1f1f;
-    margin-left: 0.5rem;
+	display: inline-block;
+	width: 56.5vmax;
+	height: 96vh;
+	background: #1f1f1f;
+	margin-left: 0.5rem;
+	margin: auto;
 }
 
 .Menu {
-    width: 100%;
-    font-size: large;
-    color: #94a0ad;
-    display: block;
+	width: 100%;
+	font-size: large;
+	color: #94a0ad;
+	display: block;
 }
 
 .Link {
-    display: block;
+	display: block;
 }
 
 .Name {
-    margin-left: 1rem;
-    text-transform: uppercase;
+	margin-left: 1rem;
+	text-transform: uppercase;
 
-    &:hover {
-        color: #fca320;
-    }
+	&:hover {
+		color: #fca320;
+	}
 }
 
 span .Center:hover {
-    color: #fca320;
+	color: #fca320;
 }
 
 .Active {
-    color: #fca320;
+	color: #fca320;
 }
 
 .Inactive {
-    color: #8d8d8d;
+	color: #8d8d8d;
 }
 
 .Inline i {
-    color: #fca320;
+	color: #fca320;
 }
 
 .Inline a:hover,
 .MenuItem a:hover {
-    color: #fca320;
+	color: #fca320;
 }
 
 .Inline,
 .MenuItem {
-    font-size: large;
-    cursor: pointer;
-    margin: 2.8rem 0;
+	font-size: large;
+	cursor: pointer;
+	margin: 2.8rem 0;
 }
 
 .MenuItem {
-    margin: auto;
-    cursor: pointer;
+	margin: auto;
+	cursor: pointer;
 }
 
 .Inline {
-    display: block;
-    cursor: pointer;
+	display: block;
+	cursor: pointer;
 }
 
 .searchBox {
-    display: block;
-    margin: 1rem;
+	display: block;
+	margin: 1rem;
 }
 
 .searchBox input {
-    width: 20vw;
-    font-weight: bold;
-    line-height: 2.5rem;
-    padding-left: 4rem;
-    border-radius: 30px;
-    background-color: #303030;
-    border: 0;
-    position: relative;
+	width: 20vw;
+	font-weight: bold;
+	line-height: 2.5rem;
+	padding-left: 4rem;
+	border-radius: 30px;
+	background-color: #303030;
+	color: #aaa;
+	font-size: large;
+	border: 0;
+	position: relative;
 }
 
 .searchBox span {
-    position: absolute;
-        z-index: 10;
-        font-size: 16px;
-        line-height: calc(1.5em + .9rem + 2px);
-        color: #8c98a5;
-        transform: translate(30px, -38px);
+	position: absolute;
+	z-index: 10;
+	font-size: 16px;
+	line-height: calc(1.5em + .9rem + 2px);
+	color: #8c98a5;
+	transform: translate(30px, -38px);
+}
+
+.header_container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.8rem;
+}
+
+.profile {
+    display: flex;
+    flex-direction: row;
+    margin-right: 0.5rem;
+}
+
+.UserInfo {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0.5rem;
+}
+
+.UserName {
+    font-weight: bold;
+    color: #8c98a5;
+    font-size: large;
+}
+
+.StatusContainer {
+    display: flex;
+    flex-direction: row;
+}
+
+.UserStatus {
+    font-weight: normal;
+    font-size: medium;
+}
+
+.Status {
+    display: block;
+    height: 11px;
+    width: 11px;
+    border-radius: 50%;
+    background-color: green;
+    transform: translate(10%, 60%);
+    margin-right: 5px;
+}
+
+.Settings {
+    font-size: x-large;
+    margin-right: 0.5rem;
 }
