--- a/admin/styles/components/Messages.module.scss
+++ b/admin/styles/components/Messages.module.scss
@@ -4,47 +4,51 @@
 	display: inline-block;
 	font-weight: bold;
 	flex-direction: column;
-	margin:  auto;
-	height: 97vh;
+	margin: auto;
+	height: 97.8vh;
 	justify-content: space-between;
-    padding: 0.5rem;
-    overflow: hidden;
-    z-index: 2;
+	padding: 0.5rem;
+	z-index: 2;
+	overflow: hidden;
+	clear: both;
 }
 
 .content_container {
 	display: inline-block;
 	width: 55vw;
-	height: 96vh;
+	height: 96.5vh;
 	background: #1f1f1f;
 	margin-left: 0.5rem;
 	margin: auto;
-    padding-left: 0.5rem;
+	padding-left: 0.5rem;
 }
 
 .conversations_list {
-    display: block;
-    position: fixed;
-    width: 21vw;
-    height: 100%;
-    z-index: 3;
-    overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
+	display: block;
+	position: fixed;
+	width: 21vw;
+	height: 86vh;
+	// background-color: rebeccapurple;
+	overflow: hidden;
+	overflow-y: scroll;
+	z-index: 3;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	// background-color: #010101;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .conversations_list::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .conversation_container {
-    display: inline-flex;
-    margin-bottom: 1.8rem;
-    width: max-content;
-    width: 20vw;
-    align-items: start;
-    justify-content: baseline;
+	display: inline-flex;
+	margin-bottom: 1.8rem;
+	width: max-content;
+	width: 20vw;
+	align-items: start;
+	justify-content: baseline;
 }
 
 .Menu {
@@ -86,66 +90,72 @@
 }
 
 .header_container {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.8rem;
+	display: flex;
+	justify-content: space-between;
+	padding: 0.8rem;
 }
 
 .message,
 .profile {
-    display: flex;
-    flex-direction: row;
-    margin-right: 0.5rem;
+	display: flex;
+	flex-direction: row;
+	margin-right: 0.5rem;
+	padding-left: 1rem;
 }
 
 .MessageInfo,
 .UserInfo {
-    display: flex;
-    flex-direction: column;
-    margin-left: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	margin-left: 0.5rem;
 }
 
 .MessageInfo {
-    width: 18.9vw;
+	width: 18.9vw;
 }
 
 .NameTime {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-left: 0.5rem;
 }
 
 .UserName {
-    font-weight: bold;
-    color: #999;
-    font-size: large;
+	font-weight: bold;
+	color: #999;
+	font-size: large;
 }
 
 .StatusContainer {
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 .UserStatus {
-    font-weight: normal;
-    font-size: medium;
+	font-weight: normal;
+	font-size: medium;
 }
 
 .Status {
-    display: block;
-    height: 11px;
-    width: 11px;
-    border-radius: 50%;
-    background-color: green;
-    transform: translate(10%, 60%);
-    margin-right: 5px;
+	display: block;
+	height: 11px;
+	width: 11px;
+	border-radius: 50%;
+	background-color: green;
+	transform: translate(10%, 60%);
+	margin-right: 5px;
 }
 
 .Settings {
-    font-size: x-large;
-    margin-right: 0.5rem;
+	font-size: x-large;
+	margin-right: 0.5rem;
 }
 
 .title {
-    text-transform: uppercase;
+	text-transform: uppercase;
+}
+
+.StatusContainer {
+	margin-left: 0.5rem;
 }
