--- a/admin/styles/pages/Home.module.scss
+++ b/admin/styles/pages/Home.module.scss
@@ -46,6 +46,12 @@
 	display: flex;
 }
 
+.searchTerm {
+}
+
+.searchTerm::placeholder {
+}
+
 .searchTerm:focus {
 	color: #fca320;
 	background-color: #8d8d8d;
