--- a/admin/styles/components/NewProgress.module.scss
+++ b/admin/styles/components/NewProgress.module.scss
@@ -1,9 +1,11 @@
+@import  '../variables.scss';
+
 .progress_container {
 	display: flex;
 	height: 155px;
 	width: 155px;
-	background: #2c2f33;
-	box-shadow: inset -16.5697px -16.5697px 41.4243px #3b4451, inset 16.5697px 16.5697px 41.4243px #000000;
+	background: $bg-lighter;
+	box-shadow: $box-shadow-inset-lighter;
 	border-radius: 50%;
 	margin: auto;
 	margin-top: -1.5rem;
@@ -58,7 +60,7 @@
 	width: 97px;
 	height: 97px;
 	fill: #2c2f33;
-	box-shadow: 16.5697px 16.5697px 41.4243px rgba(0, 0, 0, 0.5);
+	box-shadow: $box-shadow;
 	border-radius: 50%;
 }
 
@@ -69,7 +71,6 @@
 	width: 75px;
 	height: 75px;
 	fill: #2c2f33;
-	box-shadow: inset -16.5697px -16.5697px 41.4243px rgba(59, 68, 81, 0.5),
-		inset 16.5697px 16.5697px 41.4243px rgba(0, 0, 0, 0.5);
+	box-shadow: $box-shadow-inset;
 	border-radius: 50%;
 }
