--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -4,6 +4,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: Poppins, sans-serif;
+	background-image: url('/assets/sun.jpg');
 }
 a {
 	color: inherit;
@@ -51,6 +52,7 @@ a {
 }
 #villagelist {
 	display: inline-block;
+	background: transparent;
 	margin: 1rem;
 }
 #villages {
