--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -1,61 +1,41 @@
 .container {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
+
+  .main {
+    display: flex;
+    overflow: hidden;
+    overflow-y: auto;
+    object-fit: cover;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+
+    &::before {
+      content: " ";
+      background-image: url("/assets/sun.jpg");
+      background-blend-mode: normal;
+      display: flex;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 220vh;
+      opacity: 0.8;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .gridcontainer {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-gap: 2rem;
+      background: transparent;
+      padding: 2rem;
+      background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
+    }
+  }
 }
-.gridcontainer {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	grid-gap: 2rem;
-	background: transparent;
-	padding: 2rem;
-	background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
-}
-.main {
-	display: flex;
-	overflow: hidden;
-	overflow-y: auto;
-	object-fit: cover;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	z-index: 2;
-}
-.main::before {
-	content: " ";
-	background-image: url('/assets/sun.jpg');
-	background-blend-mode: normal;
-	display: flex;
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100vw;
-	height: 220vh;
-	opacity: 0.8;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-.footer {
-	display: flex;
-	flex: 1;
-	padding: 2rem 0;
-	border-top: 1px solid #eaeaea;
-	justify-content: center;
-	align-items: center;
-}
-.footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
-}
-.title a {
-	color: #0070f3;
-	text-decoration: none;
-}
-@media (max-width: 600px) {
-	.grid {
-		width: 100%;
-		flex-direction: column;
-	}
-}
+
