--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,76 +1,114 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: Poppins, sans-serif;
-	background-image: url('/assets/sun.jpg');
+  padding: 0;
+  margin: 0;
+  font-family: Poppins, sans-serif;
+  background-image: url("/assets/sun.jpg");
+
+  &::before {
+    content: " ";
+    background-blend-mode: normal;
+    display: flex;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 220vh;
+    opacity: 0.8;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 .center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 #users {
-	font-size: larger;
-	list-style: none;
-	font-weight: bold;
-	color: #555;
-	z-index: 2;
+  height: 100%;
+  width: 100%;
+  display: grid;
+ grid-template-columns: repeat(3, 1fr);
+ grid-gap: 2rem;
+  flex-wrap: wrap;
+  list-style: none;
+  overflow: hidden;
+  z-index: 2;
+  background-color: transparent;
+  font-size: larger;
+  list-style: none;
+  font-weight: bold;
+  color: #555;
 }
+
+#users li {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.75;
+  background-image: linear-gradient(45deg, #fc9842 0%, #fe5f75 74%);
+  color: #ccc;
+  border-radius: 0.5rem;
+  border: 0;
+  box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
+  padding: 0.8rem;
+}
+
 #provinces {
-	height: 100%;
-	width: 100%;
-	flex-wrap: wrap;
-	list-style: none;
-	overflow: hidden;
-	z-index: 2;
+  height: 100%;
+  width: 100%;
+  flex-wrap: wrap;
+  list-style: none;
+  overflow: hidden;
+  z-index: 2;
+  background-color: transparent;
 }
 #provinces li {
-	min-width: 19%;
-	margin: 0.6rem;
-	opacity: 0.75;
-	background: #fde5b8; /* background-color: #fbab7e; */
-	background-image: linear-gradient(
-		45deg,
-		#fbab7e 0%,
-		#f7ce68 100%
-	); /* background-color: #ffe53b; */ /* background-image: linear-gradient(220deg, #ffe53b 0%, #ff252590 100%); */
-	color: #555;
-	border-radius: 0.5rem;
-	border: 0;
-	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
-	padding: 0.8rem;
+  min-width: 19%;
+  margin: 0.6rem;
+  opacity: 0.75;
+  background: #fde5b8; /* background-color: #fbab7e; */
+  background-image: linear-gradient(45deg, #fbab7e 0%, #f7ce68 100%);
+  color: #555;
+  border-radius: 0.5rem;
+  border: 0;
+  box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
+  padding: 0.8rem;
 }
 #villagelist {
-	display: inline-block;
-	background: transparent;
-	margin: 1rem;
+  display: inline-block;
+  background: transparent;
+  margin: 1rem;
 }
 #villages {
-	height: 100%;
-	width: 100%;
-	flex-wrap: wrap;
-	list-style: none;
-	overflow: hidden;
-	z-index: 2;
+  height: 100%;
+  width: 100%;
+  flex-wrap: wrap;
+  list-style: none;
+  background: transparent;
+  overflow: hidden;
+  z-index: 2;
 }
 #villages li {
-	min-width: 19.4%;
-	margin: 0.6rem;
-	opacity: 0.75;
-	background-image: linear-gradient(45deg, #fc9842 0%, #fe5f75 74%);
-	color: #ccc;
-	border-radius: 0.5rem;
-	border: 0;
-	box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
-	padding: 0.8rem;
+  min-width: 19.4%;
+  margin: 0.6rem;
+  opacity: 0.75;
+  background-image: linear-gradient(45deg, #fc9842 0%, #fe5f75 74%);
+  color: #ccc;
+  border-radius: 0.5rem;
+  border: 0;
+  box-shadow: 3px 5px 17px rgba(65, 3, 24, 0.4);
+  padding: 0.8rem;
 }
