--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -2,6 +2,12 @@
   width: 100%;
   height: 100%;
 
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .main {
     display: flex;
     overflow: hidden;
