--- a/frontend/styles/Layout.module.scss
+++ b/frontend/styles/Layout.module.scss
@@ -1,7 +1,8 @@
-.pageContent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: transparent;
+main {
+  .pageContent {
+    display: block;
+    width: max-content;
+    height: max-content;
+    margin: auto;
+  }
 }
