--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -1,15 +1,137 @@
-.HeroWrapper {
+.homeWrapper {
   display: flex;
-  flex: 1;
-  justify-content: space-around;
-  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  max-width: 83vw;
+  padding: 2rem;
+  justify-content: space-evenly;
 
-  .Hero {
-    flex: 1.5;
-    padding: 1rem;
+  .HeroWrapper {
+    display: flex;
+    flex: 1;
+    justify-content: space-around;
+    align-items: center;
+    margin: 1rem;
+
+    .Hero {
+      flex: 1.5;
+      padding: 1rem;
+    }
+
+    .More {
+      width: 190px;
+      color: #ddd;
+      font-weight: bold;
+      font-size: large;
+    }
+
+    .Photo {
+      flex: 1;
+    }
   }
 
-  .Photo {
-    flex: 1;
+  .DescriptionWrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 1rem;
+
+    .features {
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: repeat(4, 1fr);
+      align-items: center;
+      justify-content: space-around;
+
+      .feature {
+        display: flex;
+        background-color: #f63d19;
+        color: #aaa;
+        padding: 1.3rem;
+        flex-direction: column;
+        max-width: 350px;
+        max-height: 350px;
+        align-items: center;
+        justify-content: center;
+
+        svg {
+          font-size: 160px;
+        }
+
+        h2 {
+          margin: 1rem 0;
+          font-weight: bold;
+          font-size: xx-large;
+          color: #ddd;
+        }
+
+        p {
+          font-size: x-large;
+        }
+      }
+    }
+  }
+
+  .ProcessWrapper {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 1rem;
+
+    .processes {
+      display: flex;
+      height: 430px;
+
+      svg {
+        position: absolute;
+      }
+
+      .Step {
+        position: absolute;
+        font-size: 1.3rem;
+
+        &:nth-child(2) {
+          top: 8rem;
+          left: 1.8rem;
+        }
+
+        &:nth-child(3) {
+          top: 6rem;
+          left: 35rem;
+        }
+
+        &:nth-child(4) {
+          top: 17rem;
+          left: 20rem;
+        }
+
+        &:nth-child(5) {
+          top: 27rem;
+          left: 30rem;
+        }
+
+        &:nth-child(6) {
+          top: 17rem;
+          left: 45rem;
+        }
+
+        &:nth-child(7) {
+          top: 7rem;
+          right: 35rem;
+        }
+
+        &:nth-child(8) {
+          top: 30.5rem;
+          right: 30rem;
+        }
+
+        &:nth-child(9) {
+          top: 15rem;
+          right: 5rem;
+        }
+      }
+    }
   }
 }
