--- a/frontend/styles/components/Footer.module.scss
+++ b/frontend/styles/components/Footer.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1;
   width: 100%;
-  height: 100px;
+  height: 130px;
   justify-content: space-around;
   align-items: center;
   background-color: #4e1408;
@@ -12,8 +12,22 @@
   bottom: 0;
   color: #aaa;
 
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // height: 100px;
+  // width: 200px;
+  border-radius: 50% 50% 0 0;
+
   .Footer {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    justify-content: space-around;
     align-items: center;
+    position: absolute;
+    top: 15px;
 
     svg {
       margin: 0 6px;
