--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -8,13 +8,14 @@ body {
   padding: 0;
   margin: 0;
   width: 100vw;
+  height: 100vh;
   font-family: "Poppins", sans-serif;
 }
 
 html {
   overflow: hidden;
-  -ms-overflow-style: none; 
-  scrollbar-width: none; 
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   overflow-y: scroll;
 }
 
