--- a/admin/styles/variables.scss
+++ b/admin/styles/variables.scss
@@ -3,7 +3,7 @@ $bg-secondary: #141414;
 $bg-dark: #1f1f1f;
 $bg-gray: #303030;
 $bg-green: green;
-$bg-lighter: #2c2f33;
+$bg-lighter: #282828;
 $bg-pureblack: #000000;
 
 $text-color: #aaa;
