--- a/frontend/styles/components/Header.module.scss
+++ b/frontend/styles/components/Header.module.scss
@@ -3,6 +3,8 @@
   flex: 1;
   justify-content: space-around;
   align-items: center;
+  width:100vw;
+  height: 100%;
 
   .loginBtn {
 	width: max-content;
