--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -2,13 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  box-sizing: border-box;
+* {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  display: flex;
   width: 100vw;
   height: 100vh;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
   font-family: "Poppins", sans-serif;
 }
 
