--- a/admin/styles/components/ActiveProjects.module.scss
+++ b/admin/styles/components/ActiveProjects.module.scss
@@ -1,7 +1,7 @@
-@import  '../variables.scss';
+@import "../variables.scss";
 
 .activeprojects_container {
-  background: $bg-secondary; 
+  background: $bg-darker;
   width: 100%;
   height: 100%;
   margin: 0.5rem;
@@ -11,14 +11,16 @@
 }
 
 .project_list {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: flex;
+  align-items: self-start;
+  justify-content: space-around;
   flex-direction: column;
   flex-wrap: wrap;
   grid-gap: 0.5rem;
   padding: 0.5rem;
   /* max-width: 800px; */
+    text-align: center;
+  align-items: flex-start;
 }
 
 @media (max-width: 600px) {
@@ -31,42 +33,38 @@
 .activeproject_container {
   display: inline-flex;
   background: $bg-dark;
-
-  /* background: #141414; */
   justify-content: space-around;
   border-radius: 10px;
 }
 
 .title {
-  font-size: larger;
+  font-size: x-large;
+  font-weight: bold;
   text-align: center;
 }
 
 .project_details {
   display: flex;
- width: 74vw;
+  width: 74vw;
   justify-content: space-around;
   text-align: center;
 }
 
 .project_detail {
   display: flex;
-  flex: 1;
-  margin: auto;
-  text-align: center;
+  // flex-direction: row;
+  align-self: self-start;
   color: $text-dark;
   line-height: 59px;
 }
 
 .project_details img {
-  width: 150px;
-  max-height: 40px;
+  width: 100px;
+  max-height: 50px;
+  align-self: flex-start;
   object-fit: contain;
 }
 
-.project_list {
-  text-align: center;
-}
 
 .project_featured {
   display: flex;
@@ -74,7 +72,7 @@
   text-transform: uppercase;
   width: 75vw;
   color: $text-lightest;
-  text-align: center;
   justify-content: space-around;
+  align-items: flex-start;
   line-height: 30px;
 }
