--- a/admin/styles/components/Charts.module.scss
+++ b/admin/styles/components/Charts.module.scss
@@ -35,7 +35,8 @@
 	display: inline-flex;
 	width: 24.3vw;
 	height: 40vh;
-	background: $bg-secondary;
+	background: $bg-darker;
+	padding: 2rem ;
 	/* border: 1px solid #8d8d8d80; */
 	/* padding: 20px; */
 	border-radius: 10px;
