--- a/admin/styles/components/Projects.module.scss
+++ b/admin/styles/components/Projects.module.scss
@@ -7,7 +7,8 @@
 	height: 100%;
 	text-align: center;
 	border-radius: 10px;
-	padding: 10px;
+	padding: 5px;
+	padding-left: 15px;
 	// margin: 0.5rem; 
 	/* border: 1px solid #8d8d8d80; */
 }
@@ -36,8 +37,8 @@
 	display: block;
 	width: 15vw;
 	height: 500px;
-	padding: 5px;
-	background: $bg-secondary;
+	// padding: 5px;
+	background: $bg-darker;
 	//  background-color: #f1bd89; 
 	//  background-color: #fffdd0; 
 	color: $text-darker;
