--- a/admin/styles/globals.scss
+++ b/admin/styles/globals.scss
@@ -1,17 +1,17 @@
 @import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: $text-dark;
 }
 
-html {
-  font-family: "Poppins SemiBold", sans-serif;
-}
 
 body {
-  color: $text-dark;
+  font-family: $theme-font !important;
 }
 
 a {
