--- a/admin/styles/pages/users.module.scss
+++ b/admin/styles/pages/users.module.scss
@@ -1,8 +1,15 @@
 @import  '../variables.scss';
 
-.text_center {
+.UsersWrapper {
     display: block;
     margin: auto;
+    margin-left: 0.5rem;
     text-align: center;
-    width: 78vw;
+    width: 77vw;
+    color: azure;
+    background: $bg-dark;
+
+    .SingleUser {
+        background: $bg-darker;
+    }
 }
